# Edator

./: .gitignore  CMakeLists.txt  README.md  test.txt
inc/: config.h  editor_state.h  gap_buffer.h  text_buffer.h
src/: config.c  gap_buffer.c  main.c  text_buffer.c
